AppInmobiliaria/force-app/main/default/objects/Edificio__c/Edificio__c.object-meta.xml
<CustomObject>
    <label>Edificio</label>
    <nameField>
        <label>Nombre del Edificio / Dirección Corta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Edificios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>