AppInmobiliaria/force-app/main/default/objects/Edificio__c/fields/Calle__c.field-meta.xml
<CustomField>
    <fullName>Calle__c</fullName>
    <label>Calle y Número</label>
    <length>255</length>
    <type>Text</type>
</CustomField>