AppInmobiliaria/force-app/main/default/objects/Edificio__c/fields/Conserje__c.field-meta.xml
<CustomField>
    <fullName>Conserje__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conserje</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Edificios donde trabaja</relationshipLabel>
    <relationshipName>Edificios</relationshipName>
    <type>Lookup</type>
</CustomField>