AppInmobiliaria/force-app/main/default/objects/Edificio__c/fields/Nombre_Conserje__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Conserje__c</fullName>
    <label>Nombre del Conserje</label>
    <length>100</length>
    <type>Text</type>
</CustomField>