AppInmobiliaria/force-app/main/default/objects/Edificio__c/fields/Telefono_Conserje__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Conserje__c</fullName>
    <label>Teléfono del Conserje</label>
    <type>Phone</type>
</CustomField>