AppInmobiliaria/force-app/main/default/objects/Edificio__c/fields/Tiene_Ascensor__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Ascensor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene Ascensor (Finca)</label>
    <type>Checkbox</type>
</CustomField>