AppInmobiliaria/force-app/main/default/objects/Edificio__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Calle__c</columns>
    <columns>Provincia__c</columns>
    <columns>Codigo_Postal__c</columns>
    <columns>Conserje__c</columns>
    <columns>Tiene_Ascensor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>